<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context="com.example.rushikesh.coffee.MainActivity">


        <TextView
            android:id="@+id/crush_cafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cafe_crunch"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crush_cafe"
            android:layout_margin="20dp"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_your_email_address"
            android:inputType="textWebEmailAddress"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/menu"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu"
            android:layout_marginLeft="40dp"
            android:padding="15dp"
            android:text="@string/coffee"
            android:textSize="20sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignTop="@id/checkbox1"
            android:layout_toEndOf="@id/checkbox1"
            android:layout_toRightOf="@id/checkbox1"
            android:text="-"
            android:textSize="20sp" />
        <TextView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:id="@+id/num"
            android:layout_alignTop="@id/minus"
            android:layout_toEndOf="@id/minus"
            android:layout_toRightOf="@id/minus"
            android:textSize="30sp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#000"
            />
        <Button
            android:id="@+id/plus"
            android:layout_alignTop="@id/num"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/num"
            android:layout_toRightOf="@id/num"
            android:textSize="20sp"
            android:text="+"
            />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox1"
            android:layout_marginLeft="40dp"
            android:padding="15dp"
            android:text="@string/tea"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox2"
            android:layout_marginLeft="40sp"
            android:padding="15dp"
            android:text="@string/milk_shakes"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chackbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox3"
            android:layout_marginLeft="40sp"
            android:padding="15dp"
            android:text="@string/ice_cream"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chackbox4"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:onClick="Next"
            android:src="@mipmap/ic_navigate_next_black_36dp"
            android:text="@string/next" />

        <TextView
            android:id="@+id/namemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/next"/>

        <Button
            android:id="@+id/OrderSummary"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namemail"
            android:gravity="center"
            android:text="@string/order_summary"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>
</ScrollView>
